--- a/layouts/home.html
+++ b/layouts/home.html
@@ -64,7 +64,7 @@
           </h2>
           <ul class="flex flex-col sm:grid md:grid-cols-2 xl:grid-cols-3 gap-14">
             <li class="flex flex-col h-full">
-              <span class="inline-flex items-center justify-center w-14 h-14 p-3 bg-indigo-50 rounded-xl mb-6"
+              <span class="inline-flex items-center justify-center w-14 h-14 p-3 bg-indigo-50 rounded-md mb-6"
                 >{{ with resources.Get "icons/in-memory-data-structures-icon.svg" }}{{
                 ( . | minify).Content | safeHTML }}{{ end }}</span
               >
@@ -81,7 +81,7 @@
               </a>
             </li>
             <li class="flex flex-col h-full">
-              <span class="inline-flex items-center justify-center w-14 h-14 p-3 bg-indigo-50 rounded-xl mb-6"
+              <span class="inline-flex items-center justify-center w-14 h-14 p-3 bg-indigo-50 rounded-md mb-6"
                 >{{ with resources.Get "icons/programmability.svg" }}{{ ( . |
                 minify).Content | safeHTML }}{{ end }}</span
               >
@@ -98,7 +98,7 @@
               </a>
             </li>
             <li class="flex flex-col h-full">
-              <span class="inline-flex items-center justify-center w-14 h-14 p-3 bg-indigo-50 rounded-xl mb-6"
+              <span class="inline-flex items-center justify-center w-14 h-14 p-3 bg-indigo-50 rounded-md mb-6"
                 >{{ with resources.Get "icons/extensibility-icon.svg" }}{{ ( . |
                 minify).Content | safeHTML }}{{ end }}</span
               >
@@ -115,7 +115,7 @@
               </a>
             </li>
             <li class="flex flex-col h-full">
-              <span class="inline-flex items-center justify-center w-14 h-14 p-3 bg-indigo-50 rounded-xl mb-6"
+              <span class="inline-flex items-center justify-center w-14 h-14 p-3 bg-indigo-50 rounded-md mb-6"
                 >{{ with resources.Get "icons/persistence-icon.svg" }}{{ ( . |
                 minify).Content | safeHTML }}{{ end }}</span
               >
@@ -132,7 +132,7 @@
               </a>
             </li>
             <li class="flex flex-col h-full">
-              <span class="inline-flex items-center justify-center w-14 h-14 p-3 bg-indigo-50 rounded-xl mb-6"
+              <span class="inline-flex items-center justify-center w-14 h-14 p-3 bg-indigo-50 rounded-md mb-6"
                 >{{ with resources.Get "icons/cluster.svg" }}{{ ( . | minify).Content
                 | safeHTML }}{{ end }}</span
               >
@@ -149,7 +149,7 @@
               </a>
             </li>
             <li class="flex flex-col h-full">
-              <span class="inline-flex items-center justify-center w-14 h-14 p-3 bg-indigo-50 rounded-xl mb-6"
+              <span class="inline-flex items-center justify-center w-14 h-14 p-3 bg-indigo-50 rounded-md mb-6"
                 >{{ with resources.Get "icons/availability.svg" }}{{ ( . |
                 minify).Content | safeHTML }}{{ end }}</span
               >
