--- a/layouts/commands/list.html
+++ b/layouts/commands/list.html
@@ -4,8 +4,6 @@
 
 {{ define "main" }}
   <main class="docs w-full max-w-[85rem] mx-auto px-4 sm:px-6 lg:px-8 md:flex gap-16 relative">
-    {{ partial "docs-nav.html" . }}
-
     <section class="w-full py-12">
       <h1 class="text-3xl tracking-tighter font-semibold text-slate-900">Commands</h1>
 
@@ -17,9 +15,9 @@
             <circle cx="10" cy="10" r="7" />
             <line x1="21" y1="21" x2="15" y2="15" />
           </svg>
-          <input class="transition appearance-none block w-full pl-12 pr-4 py-3 rounded-lg shadow-sm shadow-slate-900/5 bg-clip-padding bg-slate-50 hover:bg-indigo-50/50 focus:bg-indigo-50/50 border border-slate-900/10 hover:border-indigo-200 focus:border-indigo-300 ring-indigo-200 focus:ring-indigo-200 focus:ring-[3px] focus:outline-none text-slate-900/70 placeholder:text-slate-900/70" id="name-filter" type="search" autocapitalize="off" autocomplete="off" autocorrect="off" placeholder="Search commands&hellip;" spellcheck="false">
+          <input class="transition appearance-none block w-full pl-12 pr-4 py-3 rounded-md shadow-sm shadow-slate-900/5 bg-clip-padding bg-slate-50 hover:bg-indigo-50/50 focus:bg-indigo-50/50 border border-slate-900/10 hover:border-indigo-200 focus:border-indigo-300 ring-indigo-200 focus:ring-indigo-200 focus:ring-[3px] focus:outline-none text-slate-900/70 placeholder:text-slate-900/70" id="name-filter" type="search" autocapitalize="off" autocomplete="off" autocorrect="off" placeholder="Search commands&hellip;" spellcheck="false">
         </label>
-        <select id="group-filter" class="cursor-pointer transition appearance-none block w-full pl-4 pr-12 py-3 rounded-lg shadow-sm shadow-slate-900/5 bg-clip-padding bg-slate-50 hover:bg-indigo-50/50 focus:bg-indigo-50/50 border border-slate-900/10 hover:border-indigo-200 focus:border-indigo-300 ring-indigo-200 focus:ring-indigo-200 focus:ring-[3px] focus:outline-none text-slate-900/70">
+        <select id="group-filter" class="cursor-pointer transition appearance-none block w-full pl-4 pr-12 py-3 rounded-md shadow-sm shadow-slate-900/5 bg-clip-padding bg-slate-50 hover:bg-indigo-50/50 focus:bg-indigo-50/50 border border-slate-900/10 hover:border-indigo-200 focus:border-indigo-300 ring-indigo-200 focus:ring-indigo-200 focus:ring-[3px] focus:outline-none text-slate-900/70">
           <option value>Filter by group&hellip;</option>
           {{/* range $id, $group := .Site.Data.groups }}
               <option value="{{ $id }}">
@@ -118,7 +116,7 @@
             {{ end }}
           {{ end }}
           <article 
-            class="flex flex-col justify-start transition relative h-full p-6 text-sm text-slate-900 hover:text-indigo-900 focus-within:text-indigo-900 bg-white hover:bg-indigo-50/50 focus-within:bg-indigo-50/50 border border-slate-900/10 hover:border-indigo-200 focus-within:border-indigo-300 focus-within:ring-indigo-200 focus-within:ring-[3px] focus-within:outline-none bg-clip-padding shadow shadow-slate-900/5 rounded-xl" 
+            class="flex flex-col justify-start transition relative h-full p-6 text-sm text-slate-900 hover:text-indigo-900 focus-within:text-indigo-900 bg-white hover:bg-indigo-50/50 focus-within:bg-indigo-50/50 border border-slate-900/10 hover:border-indigo-200 focus-within:border-indigo-300 focus-within:ring-indigo-200 focus-within:ring-[3px] focus-within:outline-none bg-clip-padding shadow shadow-slate-900/5 rounded-md" 
             data-name="{{ .Title }}" 
             data-group="{{ .Params.group }}"
             data-version
@@ -137,5 +135,7 @@
         {{ end }}
       </div>
     </section>
+    
+    {{ partial "commands-nav.html" . }}
   </main>
 {{ end }}
