--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -27,14 +27,15 @@
         </a>
       {{ end }}
     {{ end }}
-    <div class="flex ml-auto space-x-2">
+    <div class="flex flex-col lg:flex-row ml-auto space-x-2">
       <button id="search-button" type="button" class="transition-colors shrink-0 flex-1 lg:flex-none mx-8 lg:ml-2 lg:mr-0 inline-flex items-center px-4 py-2 text-sm font-medium rounded-md border focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-slate-900 border-white/50 hover:text-indigo-600 focus:text-indigo-600 hover:bg-white focus:bg-white focus:ring-white">
         <svg class="w-[0.875rem] h-[0.875rem] mr-0.5" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
           <circle cx="10" cy="10" r="7" />
           <line x1="21" y1="21" x2="15" y2="15" />
         </svg>
-        <span class="lg:sr-only flex-auto ml-1 mr-4">Quick search&hellip;</span>
+        <span class="sr-only">Quick search&hellip…</span>
+        <span class="lg:hidden xl:block flex-auto ml-1 mr-4" aria-hidden>Search&hellip;</span>
         <script>
           if (navigator.appVersion.indexOf("Win") != -1 || navigator.appVersion.indexOf("Linux") != -1) {
             document.querySelector('[title="Command"]').textContent = "&#8963;";
