--- a/layouts/partials/search-modal.html
+++ b/layouts/partials/search-modal.html
@@ -159,7 +159,7 @@
         console.log(error)
       }
   
-      search(`https://search-service.redislabs.com/search?q=${searchTerm}&site=https://redis.io`)
+      search(`https://search-service.redislabs.com/search?q=${searchTerm}*&site=https://redis.io`)
         .then(displayData)
       	.catch(displayError)
     }
@@ -300,7 +300,7 @@
     document.addEventListener('click', clickHandler)
     document.addEventListener('keydown', keyDownHandler)
     document.addEventListener('keydown', multiKeyHandler)
-    document.addEventListener('keyup', debounce(keyUpHandler, 500))
+    document.addEventListener('keyup', debounce(keyUpHandler, 100))
     document.addEventListener('keyup', multiKeyHandler)
     document.addEventListener('submit', submitHandler)
   })()
