--- a/static/css/cli.css
+++ b/static/css/cli.css
@@ -1,4 +1,4 @@
-form.redis-cli {
+/* form.redis-cli {
   font-family: "Cascadia Code", Menlo, monospace;
   background-color: black;
   color: white;
@@ -74,4 +74,4 @@ form.redis-cli >  div.powered::before {
   position: absolute;
   inset: 0;
   margin-right: 0.75em;
-}
+} */
