--- a/layouts/partials/docs-toc.html
+++ b/layouts/partials/docs-toc.html
@@ -1,12 +1,12 @@
 {{ with .TableOfContents }}
   {{ if gt (len .) 32 }}
-    <aside class="hidden xl:block w-52 h-full shrink-0">
-      <nav class="w-52 z-40 bg-white hidden md:block overflow-auto fixed top-28 h-full max-h-[calc(100vh-15rem)] text-[0.8125rem]">
-        <dt class="font-semibold mb-3">On This Page</dt>
-        <dd class="text-slate-700">
+    <section class="hidden xl:block w-52 h-full shrink-0">
+      <div class="w-52 z-40 hidden bg-white/75 md:block overflow-auto fixed top-28 h-full max-h-[calc(100vh-15rem)] text-[0.8125rem]">
+        <h1 class="font-semibold mb-3">On This Page</h1>
+        <nav class="text-slate-700">
           {{ . }}
-        </dd>
-      </dl>
-    </aside>
+        </nav>
+      </div>
+    </section>
   {{ end }}
 {{ end }}
