--- a/layouts/commands/list.html
+++ b/layouts/commands/list.html
@@ -3,7 +3,7 @@
 {{ end }}
 
 {{ define "main" }}
-  <main class="docs w-full max-w-[85rem] mx-auto px-4 sm:px-6 lg:px-8 md:flex gap-16">
+  <main class="docs w-full max-w-[85rem] mx-auto px-4 sm:px-6 lg:px-8 md:flex gap-16 relative">
     <section class="w-full py-12">
       <h1 class="text-3xl tracking-tighter font-semibold text-slate-900">Commands</h1>
 
