--- a/layouts/download/single.html
+++ b/layouts/download/single.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
-  <main class="download w-full max-w-[85rem] mx-auto px-4 sm:px-6 lg:px-8 md:flex gap-16 relative">
+  <main class="download w-full max-w-[68rem] mx-auto px-4 sm:px-6 lg:px-8 md:flex gap-16 relative">
 
-    <section class="prose prose-slate w-full max-w-[47rem] py-12">
-      <h1>{{ .Title }}</h1>
+    <section class="prose prose-slate w-full max-w-full py-12">
+      <h1 class="lg:text-center max-w-[47rem] mx-auto">{{ .Title }}</h1>
       {{ with .Params.description }}<p>{{ . | markdownify }}</p>{{ end }}
       {{ .Content }}
     </section>
