--- a/layouts/home.html
+++ b/layouts/home.html
@@ -46,15 +46,15 @@
         </p>
         <ul class="flex flex-col md:grid grid-cols-3 gap-5 text-slate-500 max-w-2xl mx-auto">
           <li class="w-full text-sm font-semibold text-slate-900 p-6 bg-white border border-slate-900/10 bg-clip-padding shadow-md shadow-slate-900/5 rounded-lg flex flex-col justify-center">
-            <span class="mb-1 text-cyan-500 font-display text-5xl">4B+</span>
+            <span class="mb-1 text-teal-400 font-display text-5xl">4B+</span>
             Docker pulls
           </li>
           <li class="w-full text-sm font-semibold text-slate-900 p-6 bg-white border border-slate-900/10 bg-clip-padding shadow-md shadow-slate-900/5 rounded-lg flex flex-col justify-center">
-            <span class="mb-1 text-cyan-500 font-display text-5xl">50K+</span>
+            <span class="mb-1 text-teal-400 font-display text-5xl">50K+</span>
             Github stars
           </li>
           <li class="w-full text-sm font-semibold text-slate-900 p-6 bg-white border border-slate-900/10 bg-clip-padding shadow-md shadow-slate-900/5 rounded-lg flex flex-col justify-center">
-            <span class="mb-1 text-cyan-500 font-display text-5xl">50+</span>
+            <span class="mb-1 text-teal-400 font-display text-5xl">50+</span>
             Supported programing languages
           </li>
         </ul>
