--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -3,12 +3,14 @@
     {{ partial "icons/logo.html" (dict "context" . "class" "w-auto h-8") }}
   </a>
 
-	<nav data-menu class="hidden lg:flex items-center justify-center content-center gap-y-4 flex-1 z-40 fixed inset-0 lg:static bg-slate-900 lg:bg-transparent text-base sm:text-sm">
+	<nav data-menu class="hidden lg:flex items-center justify-center content-start lg:content-center lg:gap-y-4 flex-1 z-40 fixed inset-0 lg:static bg-slate-900 lg:bg-transparent text-sm max-h-screen lg:max-w-none pt-20 pb-8 lg:py-0 overflow-y-auto lg:overflow-y-visible">
     {{ $currentPage := . }}
     {{ range .Site.Menus.main }}
       {{ if .HasChildren }}
-        <dl class="{{ if $currentPage.HasMenuCurrent "main" . }}active{{ end }} group relative first:ml-auto ml-1 mt-3 mb-0 px-3 pt-2 pb-5 cursor-pointer">
-          <dt class="flex items-center justify-items-center group-hover:text-white/50 group-focus-within:text-white/50 whitespace-nowrap transition-colors" href="#">
+        
+        {{/* Desktop */}}
+        <dl class="{{ if $currentPage.HasMenuCurrent "main" . }}active {{ end }}hidden lg:flex group relative first:ml-auto ml-1 mt-3 mb-0 px-3 pt-2 pb-5 cursor-pointer">
+          <dt class="sr-only lg:not-sr-only flex items-center justify-items-center group-hover:text-white/50 group-focus-within:text-white/50 whitespace-nowrap transition-colors" href="#">
             {{ if .Pre }}
               <span class="grid place-items-center w-5 h-5 mr-2.5">
                 {{ with resources.Get .Pre }}
@@ -17,7 +19,7 @@
             {{ end }}
             {{ .Name }}
           </dt>
-          <dd class="grid text-[0.8rem] lg:text-sm text-slate-600 absolute top-full -mt-1 right-[1000rem] p-2 group-hover:right-[unset] group-hover:-left-3 group-focus-within:right-[unset] group-focus-within:-left-3 bg-white transition-opacity rounded-lg border border-slate-500/10 bg-clip-padding shadow-md">
+          <dd class="hidden lg:grid text-[0.8rem] lg:text-sm text-slate-600 absolute top-full -mt-1 right-[1000rem] p-2 group-hover:right-[unset] group-hover:-left-3 group-focus-within:right-[unset] group-focus-within:-left-3 bg-white rounded-lg border border-slate-500/10 bg-clip-padding shadow-md">
             {{ range .Children }}
               {{ if .HasChildren }}
                 <div class="-my-2 pr-3 py-4 col-start-{{ .Weight }} {{ if gt .Weight 1 }} border-l pl-5 {{ else }} pl-3 {{ end }}">
@@ -31,7 +33,7 @@
                     {{ .Name }}
                   </a>
                   {{ range .Children }}
-                    <a href="{{ .URL }}" class="{{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }} pl-[1.875rem] flex items-center whitespace-nowrap rounded-md min-w-[10rem] pt-2 text-slate-500 hover:text-slate-900 focus:text-slate-900 transition-colors">
+                    <a href="{{ .URL }}" class="{{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }} pl-[1.875rem] flex items-center whitespace-nowrap rounded min-w-[10rem] pt-2 text-slate-500 hover:text-slate-900 focus:text-slate-900 transition-colors">
                       {{ if .Pre }}
                         <span class="grid place-items-center w-5 h-5 mr-2.5">
                           {{ with resources.Get .Pre }}
@@ -43,7 +45,7 @@
                   {{ end }}
                 </div>
               {{ else }}
-              <a href="{{ .URL }}" class="{{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }} px-3 flex items-center whitespace-nowrap rounded-md min-w-[10rem] py-1 text-slate-500 hover:text-slate-900 focus:text-slate-900 transition-colors">
+              <a href="{{ .URL }}" class="{{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }} px-3 flex items-center whitespace-nowrap rounded min-w-[10rem] py-1 text-slate-500 hover:text-slate-900 focus:text-slate-900 transition-colors">
                 {{ if .Pre }}
                   <span class="grid place-items-center w-5 h-5 mr-2.5">
                     {{ with resources.Get .Pre }}
@@ -56,8 +58,36 @@
             {{ end }}
           </dd>
         </dl>
+        
+        {{/* Mobile */}}
+        <dl class="lg:hidden">
+          <dt class="sr-only">
+            {{ .Name }}
+          </dt>
+          <dd class="lg:hidden flex flex-col">
+            {{ range .Children }}
+              {{ if .HasChildren }}
+                <a href="{{ .URL }}" class="flex items-center mt-2">
+                  {{ .Name }}
+                </a>
+                {{ range .Children }}
+                  <a href="{{ .URL }}" class="mt-2">
+                    {{ .Name }}
+                  </a>
+                {{ end }}
+                <hr class="opacity-10 mt-4 mb-2">
+              {{ else }}
+              <a href="{{ .URL }}" class="mt-2">
+                {{ .Name }}
+              </a>
+              {{ end }}
+            {{ end }}
+          </dd>
+        </dl>
       {{ else }}
-        <a href="{{ .URL }}" class="group flex items-center justify-items-center first:ml-auto ml-1 px-3 py-2 rounded-md bg-transparent hover:text-white/50 focus:text-white/50 whitespace-nowrap transition-colors">
+
+        {{/* Desktop */}}
+        <a href="{{ .URL }}" class="hidden lg:flex items-center justify-items-center first:ml-auto ml-1 px-3 py-2 rounded bg-transparent hover:text-white/50 focus:text-white/50 whitespace-nowrap transition-colors">
           {{ if .Pre }}
             {{ with resources.Get .Pre }}
               <span class="grid place-items-center w-5 h-5">
@@ -66,10 +96,16 @@
           </span>
           {{ .Name }}
         </a>
+
+        {{/* Mobile */}}
+        <a href="{{ .URL }}" class="flex lg:hidden items-center mt-1.5">
+          {{ .Name }}
+        </a>
       {{ end }}
     {{ end }}
-    <div class="flex flex-col lg:flex-row ml-auto space-x-2">
-      <button id="search-button" type="button" class="transition-colors shrink-0 flex-1 lg:flex-none mx-8 lg:ml-2 lg:mr-0 inline-flex items-center px-4 py-2 text-sm font-medium rounded-md border focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-slate-900 border-white/50 hover:text-indigo-600 focus:text-indigo-600 hover:bg-white focus:bg-white focus:ring-white">
+    
+    <div class="flex flex-col lg:flex-row lg:ml-auto lg:space-x-2">
+      <button id="search-button" type="button" class="w-full lg:w-auto transition-colors shrink-0 flex-1 lg:flex-none lg:ml-2 lg:mr-0 mt-4 lg:mt-0 inline-flex items-center px-4 py-2 text-sm font-medium rounded border focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-slate-900 border-white/50 hover:text-indigo-600 focus:text-indigo-600 hover:bg-white focus:bg-white focus:ring-white">
         <svg class="w-[0.875rem] h-[0.875rem] mr-0.5" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
           <circle cx="10" cy="10" r="7" />
@@ -87,7 +123,7 @@
         </kbd>
       </button>
       {{ range .Site.Menus.buttons }}
-        <a class="transition-colors shrink-0 inline-flex items-center px-4 py-2 text-sm font-medium rounded-md border focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-slate-900
+        <a class="transition-colors shrink-0 inline-flex items-center justify-center mt-2 lg:mt-0 px-4 py-2 text-sm font-medium rounded border focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-slate-900
         {{ if (eq .Params.style "solid") }} border-transparent bg-indigo-500 hover:bg-indigo-600 focus:bg-indigo-600 focus:ring-indigo-600{{ end }}
         {{ if (eq .Params.style "outline") }} border-white/50 hover:text-indigo-600 focus:text-indigo-600 hover:bg-white focus:bg-white focus:ring-white{{ end }}" href="{{ .URL }}">
           {{ .Name }}
