--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -54,13 +54,13 @@
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     {{ end -}}
 
-    <header class="sticky top-0 z-50 flex items-center w-full text-xs lg:text-sm font-semibold lg:font-medium text-white shadow bg-slate-900">
+    <header class="sticky top-0 z-50 flex items-center w-full text-xs lg:text-sm font-semibold lg:font-medium text-white shadow bg-[#161F31]">
       {{ partial "navbar.html" . }}
     </header>
 
     {{ block "main" . }}{{ end }}
 
-    <footer class="bg-slate-900 relative z-50">
+    <footer class="bg-midnight-700 relative z-50">
       {{ partial "footer.html" . }}
 
       <script>
