--- a/layouts/home.html
+++ b/layouts/home.html
@@ -7,7 +7,7 @@
     <header class="bg-gradient-to-b from-indigo-50/30 via-indigo-50/30 to-white">
       <div class="lg:grid grid-cols-2 gap-x-10 items-center container max-w-[85rem] mx-auto px-4 sm:px-8 pt-20 pb-28">
         <div class="text-center lg:text-left">
-          <h1 class="font-display text-6xl leading-none text-slate-900 font-semibold mb-4">Redis</h1>
+          <h1 class="font-display text-6xl leading-none midnight-redis font-medium mb-4">Redis</h1>
           <p class="text-slate-500 text-xl mb-7 max-w-2xl mx-auto lg:mx-0">
             The open source, in-memory data store used by millions of developers as a database, cache, streaming engine, and message&nbsp;broker.
           </p>
@@ -78,9 +78,9 @@
                 Well-known as a "data structure server", with support for strings,
                 hashes, lists, sets, sorted sets, streams, and more.
               </p>
-              <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
                 Learn more
-                <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
+                <span class="ml-1.5 text-redis-indigo-500 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
               </a>
             </li>
             <li class="flex flex-col h-full">
@@ -95,9 +95,9 @@
                 Server-side scripting with Lua and server-side stored procedures with
                 Redis Functions.
               </p>
-              <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
                 Learn more
-                <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
+                <span class="ml-1.5 text-redis-indigo-500 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
               </a>
             </li>
             <li class="flex flex-col h-full">
@@ -112,9 +112,9 @@
                 A module API for building custom extensions to Redis in C, C++, and
                 Rust.
               </p>
-              <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
                 Learn more
-                <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
+                <span class="ml-1.5 text-redis-indigo-500 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
               </a>
             </li>
             <li class="flex flex-col h-full">
@@ -129,9 +129,9 @@
                 Keeps the dataset in memory for fast access, but can also persist all
                 writes to permanent storage to survive reboots and system failures.
               </p>
-              <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
                 Learn more
-                <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
+                <span class="ml-1.5 text-redis-indigo-500 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
               </a>
             </li>
             <li class="flex flex-col h-full">
@@ -146,9 +146,9 @@
                 Horizontal scalability with hash-based sharding, scaling to millions
                 of nodes with automatic re-partitioning when growing the cluster.
               </p>
-              <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
                 Learn more
-                <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
+                <span class="ml-1.5 text-redis-indigo-500 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
               </a>
             </li>
             <li class="flex flex-col h-full">
@@ -163,7 +163,7 @@
                 Replication with automatic failover for both standalone and clustered
                 deployments.
               </p>
-              <a class="group inline-flex items-center text-indigo-500 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
+              <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="#?">
                 Learn more
                 <span class="ml-1.5 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">&rarr;</span>
               </a>
