--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -54,7 +54,7 @@
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     {{ end -}}
 
-    <header class="sticky top-0 z-50 flex items-center w-full text-xs lg:text-sm font-semibold lg:font-medium text-white shadow bg-[#161F31]">
+    <header class="sticky top-0 z-50 flex items-center w-full text-xs lg:text-sm font-semibold lg:font-medium text-white shadow bg-midnight-700">
       {{ partial "navbar.html" . }}
     </header>
 
