Corrects the home interactive example

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -24,7 +24,7 @@
             <form class="redis-cli" typewriter>
               <pre tabindex="0">
                 PING
-                HSET db:1 name redis type NOSQL version 7.0.4
+                HSET user:1 name antirez vocation artist
                 SET e 2.71
                 INCRBYFLOAT e 0.43
                 RENAME e pi
